# collocation-coach

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  RUN.md  docker-compose.yml  pyproject.toml
content/: README.md
content/lessons/a2_b1/: day-001.yaml  day-002.yaml  day-003.yaml  day-004.yaml  day-005.yaml  day-006.yaml  day-007.yaml  day-008.yaml  day-009.yaml  day-010.yaml  day-011.yaml  day-012.yaml  day-013.yaml  day-014.yaml  day-015.yaml  day-016.yaml  day-017.yaml  day-018.yaml  day-019.yaml  day-020.yaml  day-021.yaml  day-022.yaml  day-023.yaml  day-024.yaml  day-025.yaml  day-026.yaml  day-027.yaml  day-028.yaml  day-029.yaml  day-030.yaml  day-031.yaml  day-032.yaml  day-033.yaml  day-034.yaml  day-035.yaml  day-036.yaml  day-037.yaml  day-038.yaml  day-039.yaml  day-040.yaml  (+10 more)
content/lessons/b1_b2/: day-001.yaml  day-002.yaml  day-003.yaml  day-004.yaml  day-005.yaml  day-006.yaml  day-007.yaml  day-008.yaml  day-009.yaml  day-010.yaml  day-011.yaml  day-012.yaml  day-013.yaml  day-014.yaml  day-015.yaml
docs/: AI_MVP_PLAN.md  CONTENT_GUIDE.md  FEATURE_READINESS_ADAPTIVE_PACE.md  PHASE_1_PRODUCT_CONTRACT.md  PHASE_2_READINESS_BRIEF.md  PHASE_3_READINESS_BRIEF.md  PHASE_4_READINESS_BRIEF.md  PRODUCT_PLAN.md  TECHNICAL_DECISIONS.md
src/collocation_coach/: config.py  main.py  reporting.py  runtime.py  validation.py
tests/: test_config.py  test_content_loader.py  test_database.py  test_delivery.py  test_events.py  test_feedback.py  test_onboarding.py  test_progress.py  test_study_service.py  test_telegram_keyboards.py  test_validation.py
(+17 files in other folders)
